# mcp-db-server

./: .gitignore  README.md  WRITEUP.md  demo.db  pyproject.toml
.github/workflows/: ci.yml
scripts/: seed_db.py
src/mcp_db_server/: __init__.py  audit.py  cli.py  config.py  engine.py  formatting.py  safety.py  server.py  service.py
tests/: test_cli.py  test_engine.py  test_formatting.py  test_safety.py  test_server.py
