[project]
name = "mcp-db-server"
version = "0.1.0"
description = "A production-grade MCP server that lets any LLM client safely query a SQL database in natural language — read-only, AST-validated, and capped."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rudra Raval", email = "rudraraval95@gmail.com" }]
keywords = ["mcp", "llm", "ai-agents", "sql", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.2.0",
    "sqlalchemy>=2.0",
    "sqlglot>=25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
mcp-db-server = "mcp_db_server.server:main"
mcp-db-demo = "mcp_db_server.cli:main"

[project.urls]
Homepage = "https://github.com/rudraraval4/mcp-db-server"
Repository = "https://github.com/rudraraval4/mcp-db-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_db_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
